Adding the Chevron Icon to the get quote button

--- a/index.html
+++ b/index.html
@@ -101,9 +101,7 @@
                 </p>
                 <a href="#" class="icon-link">
                     Get a quote
-                    <svg class="bi">
-                        <use xlink:href="#chevron-right"></use>
-                    </svg>
+                    <img src="./assets/svg/chevron-right.svg" alt="chevron right">
                 </a>
             </div>
             <div class="feature col">
@@ -119,9 +117,7 @@
                     you can trust that you're getting a fair and competitive rate for our services.</p>
                 <a href="#" class="icon-link">
                     Get a quote
-                    <svg class="bi">
-                        <use xlink:href="./"></use>
-                    </svg>
+                    <img src="./assets/svg/chevron-right.svg" alt="chevron right">
                 </a>
             </div>
             <div class="feature col">
@@ -136,9 +132,7 @@
                     today to learn more about how we can help you with your next move.</p>
                 <a href="#" class="icon-link">
                     Get a quote
-                    <svg class="bi">
-                        <use xlink:href="#chevron-right"></use>
-                    </svg>
+                    <img src="./assets/svg/chevron-right.svg" alt="chevron right">
                 </a>
             </div>
         </div>
