--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -8,10 +8,6 @@
     <!-- StyleSheet Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- JavaScript Bootstrap CDN -->
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
     <style>
         .feature-icon {
             width: 4rem;
@@ -108,7 +104,7 @@
                 <div
                     class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-primary fs-2 mb-3">
                     <img src="./assets/svg/bus-front.svg" alt="bus svg" width="25">
-                    
+
                 </div>
                 <h3 class="fs-2 text-body-emphasis">Countrywide</h3>
                 <p>We offer a range of services to suit your individual needs, whether you're moving locally or across
@@ -137,8 +133,35 @@
             </div>
         </div>
     </div>
+    <!-- Carousel section -->
+    <div class="container px-4 py-5">
+        <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./assets/images/family.jpg" class="d-block w-100" alt="couple">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/dog.jpg" class="d-block w-100" alt="couple">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/couple.jpg" class="d-block w-100" alt="couple">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
 
-
+<!-- JavaScript Bootstrap CDN -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+crossorigin="anonymous"></script>    
 </body>
 
 </html>
